--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 }
 .max-width{
   max-width:1300px;
-  padding: 0 50px;
+  padding: 70px 70px;
   margin:auto;
 }
 body{
@@ -108,7 +108,7 @@ input[type="checkbox"]{
   nav ul li a:hover{
     background:none;
     color:white;
-  }
+    }
 }
 span{
   color:#e52b50;
@@ -118,7 +118,7 @@ span{
     display: flex;
     height: 60vh;
     color: #fff;
-    min-height: 500px;
+    min-height: 600px;
     background-size: cover;
     background-attachment: fixed;
     font-family: 'Montserrat', sans-serif;
@@ -162,6 +162,9 @@ span{
     color: #e52b50;
     background: none;
 }
+h1{
+  font-size:80px;
+}
 h2{
   color:#e52b50;
   margin:15px 0px 15px;
@@ -177,10 +180,9 @@ h4{
   font-size:25px;
   letter-spacing: 2px;
 }
-}
 .image{
-  width:30%;
-  height:80%;
+  width:20%;
+  height:40%;
   display:inline-block;
   justify-content:center;
   align-items:center;
@@ -188,14 +190,14 @@ h4{
   line-height: 1.4em;
 }
 .image img{
-  height:300px;
+  height:350px;
   width:auto;
   border-radius:50%;
 }
 .about .title{
   color:#e52b50;
   text-align:center;
-  font-size:40px;
+  font-size:50px;
   font-weight:500;
   margin-bottom:60px;
   padding-bottom:20px;
@@ -212,13 +214,19 @@ h4{
 .skills{
   color:white;
   width:100%
-  padding:78px 0px;
-  background-color:242424;
 }
 .skills .title{
   color:#e52b50;
   text-align:center;
-  font-size:40px;
+  font-size:50px;
+  font-weight:500;
+  margin-bottom:60px;
+  padding-bottom:20px;
+}
+.portfolio .title{
+  color:#e52b50;
+  text-align: center;
+  font-size:50px;
   font-weight:500;
   margin-bottom:60px;
   padding-bottom:20px;
@@ -255,6 +263,14 @@ h4{
   box-shadow:0 10px 15px rgba(255, 0, 0, 0.3);
 }
 /* zona contatti styling */
+.contact .title {
+  color:#e52b50;
+  text-align: center;
+  font-size:50px;
+  font-weight: 500;
+  margin-bottom: 60px;
+  padding-bottom:20px;
+}
 .contact .contact-content .column{
     width: calc(40% - 30px);
 }
@@ -279,7 +295,7 @@ h4{
     color: #e52b50;
 }
 .contact .contact-content .info .head{
-    font-weight: 500;
+    font-weight: 400;
 }
 .contact .contact-content .info .sub-title{
     color: #333;
@@ -344,16 +360,82 @@ h4{
   background: none;
 }
 /* zona footer styling */
-footer{
-    background: #111;
-    padding: 15px 23px;
-    color: #fff;
-    text-align: center;
+footer {
+  background: #1b1b1b;
+  color: white;
+  margin-top:10px;
+  text-align: center;
 }
-footer span a{
-    color: white;
-    text-decoration: none;
+/* footer social icons */
+
+ul.social-network {
+  list-style: none;
+  display: inline;
 }
-footer span a:hover{
-    text-decoration: underline;
+
+ul.social-network li {
+  display: inline;
+  margin: 0 5px;
+}
+.social-network a.icoGithub:hover {
+  background-color: #1b1b1b;
+}
+
+.social-network a.icoLinkedin:hover {
+  background-color: #007bb7;
+}
+
+.social-network a.icoGithub:hover i,
+.social-network a.icoLinkedin:hover i {
+  color: #fff;
+}
+
+.social-network a.socialIcon:hover,
+.socialHoverClass {
+  color: #44BCDD;
+}
+
+.social-circle li a {
+  display: inline-block;
+  position: relative;
+  margin: 0 auto 0 auto;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  text-align: center;
+  width: 30px;
+  height: 30px;
+  font-size: 15px;
+}
+
+.social-circle li i {
+  margin: 0;
+  line-height: 30px;
+  text-align: center;
+}
+
+.social-circle li a:hover i,
+.triggeredHover {
+  -moz-transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+  -ms--transform: rotate(360deg);
+  transform: rotate(360deg);
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.social-circle i {
+  color: #595959;
+  -webkit-transition: all 0.8s;
+  -moz-transition: all 0.8s;
+  -o-transition: all 0.8s;
+  -ms-transition: all 0.8s;
+  transition: all 0.8s;
+}
+
+.social-network a {
+  background-color: #F9F9F9;
 }
